--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "build/src/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && chmod 755 build/src/index.js && mkdir -p build/test",
+    "build": "tsc && mkdir build\\test 2>nul || echo Directory already exists",
     "start": "node build/src/index.js",
     "dev": "tsc && node build/src/index.js",
-    "test": "pnpm run build && node build/test/final-test.js",
-    "test:get-thread": "pnpm run build && node build/test/tools/test-get-post-thread.js",
-    "test:url-converter": "pnpm run build && node build/test/url-converter/test-url-converter.js",
-    "process-posts": "pnpm run build && node build/src/scripts/process-post-examples.js",
-    "process-threads": "pnpm run build && node build/src/scripts/process-thread-examples.js"
+    "test": "npm run build && node build/test/final-test.js",
+    "test:get-thread": "npm run build && node build/test/tools/test-get-post-thread.js",
+    "test:url-converter": "npm run build && node build/test/url-converter/test-url-converter.js",
+    "process-posts": "npm run build && node build/src/scripts/process-post-examples.js",
+    "process-threads": "npm run build && node build/src/scripts/process-thread-examples.js"
   },
   "keywords": [
     "bluesky",
